<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TvRecorder Demo</string>

    <!-- THE MAIN MENU -->
    <string name="main_menu_tvrecorder_button">TvRecorder</string>
    <string name="main_menu_tvguide_button">TvGuide</string>
    <string name="main_menu_settings_button">Settings</string>
    <string name="main_menu_search_button">Search</string>
    <string name="main_menu_joblist_button">Jobs</string>

    <!-- THE INFO DIALOG DISPLAYED WHEN FIRST TIME RUNNING THIS APP -->
    <string name="info_dialog_title">Welcome to TvRecorder</string>
    <string name="info_dialog_intro">The TvRecorder App acts as a client that telecontrols the TvRecorder server. This App cannot work without the TvRecorder server!</string>
    <string name="info_dialog_text">Please make sure that your personal TvRecorder server is installed and that the settings of this app are correct. If you don\'t have the server installed, download it at http://bitbucket.org/iweinzierl/tvrecorder and follow the instructions in the README.</string>

    <!-- THE RECORD ACTIVITY -->
    <string name="tvrecorder_contextmenu_quit">Quit</string>
    <string name="tvrecorder_contextmenu_settings">Settings</string>
    <string name="tvrecorder_contextmenu_tvguide">TvGuide</string>

    <string name="tvguide_title">TvGuide</string>
    <string name="tvguide_update_list">Update</string>
    <string name="tvguide_record_shows">Record selected shows</string>
    <string name="tvguide_load_progress_title">Update</string>
    <string name="tvguide_load_progress_text">Loading TV shows</string>
    <string name="tvguide_channel_prompt">Choose channel</string>
    <string name="tvguide_context_open">Details</string>
    <string name="tvguide_context_record">Record</string>
    <string name="tvguide_notification_ticker">TvGuide: loaded new TV shows</string>
    <string name="tvguide_notification_title">Retrieved new TV shows from server.</string>
    <string name="tvguide_notification_text">$SHOWS new TV shows / $CHANNELS new channels</string>

    <string name="tvshowdetail_title">Tv Show Details</string>
    <string name="tvshowdetail_datesuffix">o clock</string>

    <string name="tvsearch_title">Tv Search</string>
    <string name="tvsearch_options_record_selected">Record selected TV shows</string>
    <string name="tvsearch_options_record_all">Record all TV shows</string>

    <string name="tvjoblist_title">Tv Joblist</string>
    <string name="tvjoblist_load_progress_title">Update</string>
    <string name="tvjoblist_load_progress_text">Fetching jobs</string>
    <string name="tvjoblist_load_failed_title">Error while fetching jobs</string>
    <string name="tvjoblist_load_failed_text">No jobs could be retrieved from server. Check your internet connection and try again.</string>
    <string name="tvjoblist_remove_progress_title">Removing jobs</string>
    <string name="tvjoblist_remove_progress_text">Removing jobs from server</string>
    <string name="tvjoblist_remove_failed_title">Error while removing jobs from server</string>
    <string name="tvjoblist_remove_failed_text">Error while removing jobs. Check your internet connection and try again.</string>
    <string name="tvjoblist_no_jobs_title">No jobs found.</string>
    <string name="tvjoblist_no_jobs_text">There are currently no jobs in queue.</string>
    <string name="tvjoblist_context_remove_single">Remove selected job</string>
    <string name="tvjoblist_context_remove_all">Remove all jobs</string>

    <string name="keyvalueitem_change">change</string>

    <string name="addjob_start">Start</string>
    <string name="addjob_end">End</string>
    <string name="addjob_channel">Channel</string>
    <string name="addjob_name">Name</string>
    <string name="addjob_start_record">record</string>
    <string name="addjob_load_progress_title">Update</string>
    <string name="addjob_load_progress_text">Fetching channels</string>
    <string name="addjob_recorded_message">New job created:</string>
    <string name="addjob_recorded_start">Start: </string>
    <string name="addjob_recorded_end">End: </string>
    <string name="addjob_recorded_channel">Channel: </string>
    <string name="addjob_recorded_name">Name: </string>
    <string name="addjob_recorded_error_title">Error while creating new job: </string>

    <string name="jobrecorder_record_demo_title">Demo Version</string>
    <string name="jobrecorder_record_demo_text">This function is not supported in this demo app. Download the full version of TvRecorder to enable this function.</string>
    <string name="jobrecorder_record_progress_title">Record</string>
    <string name="jobrecorder_record_progress_text">Recording selected TV shows</string>
    <string name="jobrecorder_record_error_title">Error</string>
    <string name="jobrecorder_record_error_text">Error while recordings job(s).</string>

    <string name="datepicker_cancel">cancel</string>
    <string name="datepicker_ok">ok</string>

    <string name="timepicker_cancel">cancel</string>
    <string name="timepicker_ok">ok</string>

    <!-- ERRORS -->
    <string name="error">Error</string>
    <string name="error_endtime_before_starttime">Start time needs to be before end time</string>
    <string name="error_no_channels">No channels retrieved</string>

    <!-- PREFERENCES -->
    <string name="prefs_server">Server Settings</string>
    <string name="prefs_server_url">Server URL</string>
    <string name="prefs_server_url_summary">The HTTP address of the TvRecorder server.</string>
    <string name="prefs_server_port">Server Port</string>
    <string name="prefs_server_port_summary">The port of the TvRecorder server.</string>
    <string name="prefs_server_user">User</string>
    <string name="prefs_server_user_summary">The user that is used for TvRecorder authentication.</string>
    <string name="prefs_server_passwd">Password</string>
    <string name="prefs_server_passwd_summary">The password that is used for TvRecorder authentication.</string>
    <string name="prefs_server_authentication">Use Authentication</string>
    <string name="prefs_server_authentication_summary">Enable authentication if required by TvRecorder server.</string>
    <string name="prefs_tvguide">Settings TvGuide</string>
    <string name="prefs_tvguide_update_automatically">Automatic Update</string>
    <string name="prefs_tvguide_update_automatically_summary">When automatic update is enabled, the TvGuide is updated in the specified interval.</string>
    <string name="prefs_tvguide_update_wifi_only">Wifi connection required</string>
    <string name="prefs_tvguide_update_wifi_only_summary">If this option is enabled, a Wifi connection is required for updates.</string>
    <string name="prefs_tvguide_update_roaming">Update allowed while roaming?</string>
    <string name="prefs_tvguide_update_roaming_summary">If this option is enabled, updates take place while roaming.</string>
    <string name="prefs_tvguide_update_interval">Update interval</string>
    <string name="prefs_tvguide_update_interval_summary">Update interval in hours</string>
</resources>
