<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- first row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- first row / first column -->
        <LinearLayout
            android:id="@+id/tvrecorder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:clickable="true"
            android:background="@drawable/main_menu_button_state">

            <ImageView
                android:src="@drawable/tvrecorder_button"
                android:scaleType="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:text="@string/main_menu_tvrecorder_button"/>

        </LinearLayout>

        <!-- first row / second column -->
        <LinearLayout
            android:id="@+id/tvguide"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:clickable="true"
            android:background="@drawable/main_menu_button_state">

            <ImageView
                android:src="@drawable/tvguide_button"
                android:scaleType="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:text="@string/main_menu_tvguide_button"/>

        </LinearLayout>

    </LinearLayout>


    <!-- second row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- second row / first column -->
        <LinearLayout
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:clickable="true"
            android:background="@drawable/main_menu_button_state">

            <ImageView
                android:src="@drawable/search_button"
                android:scaleType="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:text="@string/main_menu_search_button"/>

        </LinearLayout>

        <!-- second row / second column -->
        <LinearLayout
            android:id="@+id/joblist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:clickable="true"
            android:background="@drawable/main_menu_button_state">

            <ImageView
                android:src="@drawable/joblist_button"
                android:scaleType="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:text="@string/main_menu_joblist_button"/>

        </LinearLayout>

    </LinearLayout>

    <!-- third row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- second row / second column -->
        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:clickable="true"
            android:background="@drawable/main_menu_button_state">

            <ImageView
                android:src="@drawable/settings_button"
                android:scaleType="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:text="@string/main_menu_settings_button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout> <!-- Layout end -->
